--- a/index.html
+++ b/index.html
@@ -1,73 +1,106 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Evarugs в вашем городе</title>
-</head>
-<body>
-    <div class="header">
-        <div class="container">
-            <div class="header__wrap">
-                <div class="header__telephone">
-                    <div class="header__telephone-img">
-                        <img src="img/telephone.svg" alt="telephone">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,500;0,700;0,900;1,900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/style.css">
+        <title>Evarugs в вашем городе</title>
+    </head>
+    <body>
+        <div class="header">
+            <div class="container">
+                <div class="header__wrap">
+                    <div class="header__telephone">
+                        <div class="header__telephone-img">
+                            <img src="img/telephone.svg" alt="telephone">
+                        </div>
+                        <div class="header__telephone-text">
+                            <span>+375 29 292-29-29 (VEL)</span>
+                            <span>+375 33 333-33-33 (МТС)</span>
+                        </div>
                     </div>
-                    <div class="header__telephone-text">
-                        <span>+375 29 292-29-29 (VEL)</span>
-                        <span>+375 33 333-33-33 (МТС)</span>
+                    <div class="header__maps">
+                        <div class="header__maps-img">
+                            <img src="img/map.svg" alt="map">
+                        </div>
+                        <span>ваш город</span>
                     </div>
-                </div>
-                <div class="header__maps">
-                    <div class="header__maps-img">
-                        <img src="img/map.svg" alt="map">
+                    <div class="header__inst">
+                        <div class="header__inst-img">
+                            <img src="img/inst_header.svg" alt="instagram">
+                        </div>
+                        <span>посетите нашу страницу</span>
                     </div>
-                    <span>ваш город</span>
-                </div>
-                <div class="header__inst">
-                    <div class="header__inst-img">
-                        <img src="img/inst_header.svg" alt="instagram">
-                    </div>
-                    <span>посетите нашу страницу</span>
                 </div>
             </div>
         </div>
-    </div>
 
-    <div class="footer">
-        <div class="container">
-            <div class="footer__wrap">
-                <div class="footer__inst">
-                    <h3 class="footer__header">МЫ В СОЦИАЛЬНЫХ СЕТЯХ</h3>
-                    <div class="footer__inst-img">
-                        <img src="img/inst_footer.png" alt="instagram">
+        <div class="main-display">
+            <div class="container">
+                <div class="main-display__wrap">
+                    <div class="main-display__top">
+                        <div class="main-display__logo">
+                            <div class="main-display__logo-img">
+                                <img src="img/logo.svg" alt="logo">
+                            </div>
+                            <div class="main-display__title">EVARUGS</div>
+                        </div>
+                        <ul class="main-display__nav">
+                            <li>отзывы</li>
+                            <li>что это?</li>
+                            <li>контакты</li>
+                        </ul>
                     </div>
-                </div>
-                <div class="footer__telephone">
-                    <h3 class="footer__header">КОНТАКТНЫЕ ТЕЛЕФОНЫ</h3>
-                    <ul>
-                        <li>+375 29 292-29-29 (VEL)</li>
-                        <li>+375 33 333-33-33 (МТС)</li>
-                    </ul>
-                </div>
-                <div class="footer__adress">
-                    <h3 class="footer__header">О НАС</h3>
-                    <ul>
-                        <li>Индивидуальное изготовление EVA ковриков для вашего автомобиля</li>
-                        <li>ваш город</li>
-                    </ul>
-                </div>
-                <div class="footer__decor-1">
-                    <img src="img/decor-1.svg" alt="decor">
-                </div>
-                <div class="footer__decor-2">
-                    <img src="img/decor-2.svg" alt="decor">
+                    <div class="main-display__center">
+                        <div class="main-display__left">
+                            <h1 class="main-display__header">Инновационные коврики для автомобиля</h1>
+                            <div class="main-display__subheader">в вашем городе</div>
+                            <button type="button" class="main-display__button">Заказать</button>
+                        </div>
+                        <div class="main-display__right">
+                            <img src="img/carpet.png" alt="carpets">
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</body>
+
+        <div class="footer">
+            <div class="container">
+                <div class="footer__wrap">
+                    <div class="footer__inst">
+                        <h3 class="footer__header">МЫ В СОЦИАЛЬНЫХ СЕТЯХ</h3>
+                        <div class="footer__inst-img">
+                            <img src="img/inst_footer.png" alt="instagram">
+                        </div>
+                    </div>
+                    <div class="footer__telephone">
+                        <h3 class="footer__header">КОНТАКТНЫЕ ТЕЛЕФОНЫ</h3>
+                        <ul>
+                            <li>+375 29 292-29-29 (VEL)</li>
+                            <li>+375 33 333-33-33 (МТС)</li>
+                        </ul>
+                    </div>
+                    <div class="footer__adress">
+                        <h3 class="footer__header">О НАС</h3>
+                        <ul>
+                            <li>Индивидуальное изготовление EVA ковриков для вашего автомобиля</li>
+                            <li>ваш город</li>
+                        </ul>
+                    </div>
+                    <div class="footer__decor-1">
+                        <img src="img/decor-1.svg" alt="decor">
+                    </div>
+                    <div class="footer__decor-2">
+                        <img src="img/decor-2.svg" alt="decor">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
