--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,500;0,700;0,900;1,900&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/style.css">
         <title>Evarugs в вашем городе</title>
@@ -64,6 +64,43 @@
                         </div>
                         <div class="main-display__right">
                             <img src="img/carpet.png" alt="carpets">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="about">
+            <div class="container">
+                <div class="about__wrap">
+                    <h2 class="about__header">Что такое <span>EVA</span> коврики?</h2>
+                </div>
+                <div class="about__items">
+                    <div class="about__item">
+                        <div class="about__item-img">
+                            <img src="img/material.jpg" alt="photo">
+                        </div>
+                        <div class="about__item-description">
+                            <h3 class="about__item-header">МАТЕРИАЛ</h3>
+                            <p class="about__item-text">Коврики EVA всесезонные и отличаются уникальной поверхностью материала с ячейками ромбовидной формы. Из-за чего вода не проливается при изъятии ковра и не плещется при езде. Коврики воду не пропускают.</p>
+                        </div>
+                    </div>
+                    <div class="about__item">
+                        <div class="about__item-img">
+                            <img src="img/differences.jpg" alt="photo">
+                        </div>
+                        <div class="about__item-description">
+                            <h3 class="about__item-header">ОТЛИЧИЯ</h3>
+                            <p class="about__item-text">Резиновые коврики загибаются и лезут на педали. EVA коврики такого не допустят! Специальные липучки держат его в одном положении. При желании, для водителя устанавливается подпятник из рельефного алюминия.</p>
+                        </div>
+                    </div>
+                    <div class="about__item">
+                        <div class="about__item-img">
+                            <img src="img/color.jpg" alt="photo">
+                        </div>
+                        <div class="about__item-description">
+                            <h3 class="about__item-header">РАСЦВЕТКА</h3>
+                            <p class="about__item-text">Автомобильные коврики EVA можно заказать и в индивидуальных размерах и в разных цветах, которые комбинируется на выбор покупателя с такими же цветами окантовочной полипропиленовой ременной ленты.</p>
                         </div>
                     </div>
                 </div>
